plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5' //spring-core=6.1.6
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.sptek'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-web-services:3.0.4'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.jetbrains:annotations:24.0.1'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'
	implementation 'org.apache.httpcomponents:fluent-hc:4.5.14'
	implementation 'org.apache.httpcomponents.client5:httpclient5-win:5.2.1'
	implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.1'
	implementation 'javax.servlet:jstl:1.2'
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.9'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.0.4'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
	implementation 'org.glassfish:jakarta.el:4.0.2'
	implementation 'com.zaxxer:HikariCP:5.0.0'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
	implementation 'org.apache.tomcat:tomcat-jdbc:10.1.9'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.aspectj:aspectjweaver:1.9.7'
	implementation 'org.modelmapper:modelmapper:2.4.2'
    implementation 'com.h2database:h2:2.1.214'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.4.RELEASE'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
	implementation 'org.projectlombok:lombok:1.18.26'

	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4' //코드 수정 실시간 반영

	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
	testImplementation 'org.springframework.security:spring-security-test'

	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testCompileOnly 'org.projectlombok:lombok:1.18.26'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'

	// JWT
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
